# holon

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  README.zh-CN.md  README.zh.md  action.yml  build.rs  format-test.md  generate_builtin_catalog  go.mod  go.sum  holon-intro.txt  test.md  workspace.manifest.json
.claude/: settings.local.json
.github/: CODEOWNERS
.holon/: config.yaml
benchmark/: package-lock.json  package.json  run.mjs
benchmarks/: README.md
docs/: adapter-claude.md  adapter-encapsulation.md  agent-bundle.md  agent-claude.md  agent-encapsulation.md  agent-home-doc-refactor-plan.md  agent-home-persona-redesign.md  agent-home-unification.md  agent-service.md  agent-types-and-default-agent.md  agentinbox-callback-integration.md  agentinbox-dogfood-runbook.md  agentinbox-wake-hint-quickstart.md  agentinbox-wake-only-quickstart.md  architecture-current.md  architecture-overview.md  basic-tool-comparison.md  benchmark-guardrails.md  benchmark-plan.md  benchmark-results.md  callback-capability-and-providerless-ingress.md  claude-code-reference.md  development.md  documentation-cleanup-audit.md  git-configuration.md  github-token-and-commit-identity.md  holon-architecture.md  homebrew-setup.md  local-operator-troubleshooting.md  manifest-format.md  modes.md  next-phase-direction.md  operator-guide-v0.11.md  pm-demo-implementation-plan.md  pm-dev-demo.md  post-benchmark-roadmap.md  project-goals.md  prompt-benchmark-decisions.md  refactor-terminology-plan.md  release.md  (+23 more)
e2e-manual/: README.md
examples/: buggy.go  env-test.yaml  fix-bug.yaml  hello-world.yaml  holon-config.yaml  pr-fix-defer-example.yaml
holonbot/: .env.example  .gitignore  README.md  package-lock.json  package.json  vercel.json
homebrew-tap/: README.md
rfc/: 0001-holon-atomic-execution-unit.md  0002-adapter-scheme.md  0002-agent-scheme.md  0003-skill-artifact-architecture.md  0004-proactive-agent-controller.md  0005-serve-api-direction.md  0006-autonomous-capability-composition.md  README.md
schemas/: bundle.manifest.schema.json  manifest.schema.json  run.manifest.schema.json  skill-package.schema.json  workspace.manifest.schema.json
scripts/: build-skills-package.sh  check-test-temp-resources.py  docker-e2e.py  docker-live-acceptance.py  docker-smoke.sh  generate-homebrew-formula.sh  generate_builtin_catalog.go  migrate_workspace_tests.sh  test.sh  update-homebrew-formula.sh
src/: agent_memory.rs  agent_notes.rs  agent_template.rs  agents_md.rs  auth.rs  brief.rs  callbacks.rs  cli.rs  client.rs  config.rs  context.rs  contract_inventory.rs  daemon.rs  diagnostics.rs  fd_limit.rs  host.rs  host_registry.rs  http.rs  http_dto.rs  ids.rs  ingress.rs  lib.rs  main.rs  model_catalog.rs  model_config_migration.rs  model_discovery.rs  notes.rs  notes_catalog.rs  object_query_cache.rs  object_resolver.rs  onboarding.rs  onboarding_tui.rs  openapi.rs  operator_event.rs  policy.rs  presentation.rs  queue.rs  run_once.rs  runtime.rs  runtime_db.rs  (+16 more)
tests/: cli_exit_codes.rs  cli_json_contract.rs  cli_snapshot.rs  http_callback.rs  http_client.rs  http_control.rs  http_events.rs  http_ingress.rs  http_operator_transport.rs  http_route_snapshot.rs  http_tasks.rs  http_workspace.rs  live_anthropic.rs  live_anthropic_cache.rs  live_anthropic_compatible.rs  live_codex.rs  live_llm_baseline.rs  live_openai.rs  live_openai_chat_completions.rs  live_openai_codex_compact.rs  live_prompt_continuity.rs  live_provider_smoke.rs  live_view_image.rs  (+27 more)
(+1355 files in other folders)
