[package]
name = "holon"
version = "0.1.0"
edition = "2021"
authors = ["Holon Contributors"]
description = "A headless, event-driven runtime for long-lived agents"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
hyper = { version = "1.5", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio", "service", "http1", "http2"] }
libc = "0.2"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
pulldown-cmark = "0.13"
portable-pty = "0.9"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2"
uuid = { version = "1.11", features = ["serde", "v4"] }
twox-hash = { version = "2.1.2", features = ["std"] }

[dev-dependencies]
tempfile = "3.14"
proptest = "1.6"

[lib]
name = "holon"
path = "src/lib.rs"

[[bin]]
name = "holon"
path = "src/main.rs"
