[package]
name = "holon"
version = "0.24.0"
edition = "2021"
authors = ["Holon Contributors"]
description = "A headless, event-driven runtime for long-lived agents"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://holon.run"
repository = "https://github.com/holon-run/holon"
documentation = "https://holon.run"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
base64 = "0.22"
arc-swap = "1.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
hyper = { version = "1.5", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio", "service", "http1", "http2"] }
libc = "0.2"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
reqwest = { version = "0.12", features = ["blocking", "gzip", "json", "rustls-tls"], default-features = false }
rpassword = "7.3"
rust-embed = "8.5"
rusqlite = { version = "0.31", features = ["bundled"] }
pulldown-cmark = "0.13"
portable-pty = "0.9"
percent-encoding = "2.3"
mime_guess = "2.0"
schemars = { version = "0.9", features = ["chrono04"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6.8", features = ["compression-gzip", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2"
url = "2.5"
uuid = { version = "1.11", features = ["serde", "v4"] }
twox-hash = { version = "2.1.2", features = ["std"] }
aide = { version = "0.15.1", features = ["axum"] }

[dev-dependencies]
flate2 = "1.0"
tempfile = "3.14"
proptest = "1.6"

[lib]
name = "holon"
path = "src/lib.rs"

[[bin]]
name = "holon"
path = "src/main.rs"
